force-app/main/default/objects/Knowledge__kav/fields/CBK_Codigo_Externo_Producto__c.field-meta.xml
<CustomField>
    <fullName>CBK_Codigo_Externo_Producto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código externo Producto</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>