force-app/main/default/objects/Knowledge__kav/fields/CC_Fecha_Caducidad__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Caducidad__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de caducidad</label>
    <type>DateTime</type>
</CustomField>