force-app/main/default/objects/Knowledge__kav/fields/CC_Fecha_Inicio_Publicacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_Inicio_Publicacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de inicio de publicación</label>
    <type>DateTime</type>
</CustomField>