force-app/main/default/objects/Knowledge__kav/fields/CC_IA_EtiquetadoGPT__c.field-meta.xml
<CustomField>
    <fullName>CC_IA_EtiquetadoGPT__c</fullName>
    <description>Etiquetado creado mediante GPT sobre el contenido del artículo (Answer__c)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Etiquetado GPT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>