force-app/main/default/objects/Knowledge__kav/fields/CC_MCC_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CC_MCC_Motivo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Motivo</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Knowledge (Motivo)</relationshipLabel>
    <relationshipName>Knowledge2</relationshipName>
    <type>Lookup</type>
</CustomField>