force-app/main/default/objects/Knowledge__kav/fields/CC_Responsable_Externo__c.field-meta.xml
<CustomField>
    <fullName>CC_Responsable_Externo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Responsable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Colaborador</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Knowledge</relationshipLabel>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>