force-app/main/default/objects/Knowledge__kav/fields/CC_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo__c</fullName>
    <description>Se usa para separar los artículos del contact Cliente y Empleado</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Empleado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>