force-app/main/default/objects/Knowledge__kav/fields/CSBD_NombresProductos__c.field-meta.xml
<CustomField>
    <fullName>CSBD_NombresProductos__c</fullName>
    <description>Tiene los nombres de los productos asociados a este articulo. Usa los valores que hay en CSBD_Producto__c.</description>
    <label>Nombres Productos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deposito Bonificado</fullName>
            </value>
            <value>
                <fullName>MyBox Vida</fullName>
            </value>
            <value>
                <fullName>MyBox Auto TR</fullName>
            </value>
            <value>
                <fullName>MyBox Hogar</fullName>
            </value>
            <value>
                <fullName>MyBox Salud</fullName>
            </value>
            <value>
                <fullName>Mascotas</fullName>
            </value>
            <value>
                <fullName>Seviam</fullName>
            </value>
            <value>
                <fullName>MyBox Jubilación</fullName>
            </value>
            <value>
                <fullName>Nómina</fullName>
            </value>
            <value>
                <fullName>MyCard Imagin</fullName>
            </value>
            <value>
                <fullName>MyBox Auto</fullName>
            </value>
            <value>
                <fullName>MyCard</fullName>
            </value>
            <value>
                <fullName>Nomina</fullName>
            </value>
            <value>
                <fullName>MyBox Alarmas</fullName>
            </value>
            <value>
                <fullName>Previsión Profesional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>