force-app/main/default/objects/Knowledge__kav/recordTypes/CC_Arbol_Decision.recordType-meta.xml
<RecordType>
    <fullName>CC_Arbol_Decision</fullName>
    <active>true</active>
    <label>Árbol de decisión</label>
</RecordType>