force-app/main/default/objects/Knowledge__kav/recordTypes/CC_Ficha_Producto.recordType-meta.xml
<RecordType>
    <fullName>CC_Ficha_Producto</fullName>
    <active>true</active>
    <label>Ficha producto</label>
</RecordType>