force-app/main/default/objects/Knowledge__kav/recordTypes/CC_Informacion_General.recordType-meta.xml
<RecordType>
    <fullName>CC_Informacion_General</fullName>
    <active>true</active>
    <label>Información general</label>
</RecordType>