force-app/main/default/objects/Knowledge__kav/recordTypes/CC_Pregunta_Respuesta.recordType-meta.xml
<RecordType>
    <fullName>CC_Pregunta_Respuesta</fullName>
    <active>true</active>
    <label>Pregunta-respuesta canal telefónico</label>
</RecordType>