force-app/main/default/objects/Knowledge__kav/recordTypes/CC_Procedimiento.recordType-meta.xml
<RecordType>
    <fullName>CC_Procedimiento</fullName>
    <active>true</active>
    <label>Procedimiento</label>
</RecordType>