force-app/main/default/objects/Knowledge__kav/recordTypes/CC_Video.recordType-meta.xml
<RecordType>
    <fullName>CC_Video</fullName>
    <active>true</active>
    <description>Permite crear nuevos artículos que adjunten videos formativos.</description>
    <label>Vídeo</label>
</RecordType>