force-app/main/default/objects/Knowledge__kav/recordTypes/SAC_Protocolo.recordType-meta.xml
<RecordType>
    <fullName>SAC_Protocolo</fullName>
    <active>true</active>
    <description>Tipo de artículo para los protocolos de reclamaciones SAC</description>
    <label>Protocolo SAC</label>
</RecordType>