force-app/main/default/objects/Knowledge__kav/validationRules/CC_Controlar_Fechas.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Controlar_Fechas</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  NOW() &gt; CC_Fecha_Inicio_Publicacion__c ||
ISCHANGED(CC_Fecha_Inicio_Publicacion__c) &amp;&amp;  NOW() &gt; CC_Fecha_Inicio_Publicacion__c ||
ISCHANGED(CC_Fecha_Caducidad__c) &amp;&amp;  NOW() &gt; CC_Fecha_Caducidad__c ||
ISCHANGED(CC_Fecha_Caducidad__c) &amp;&amp;  ISCHANGED(CC_Fecha_Inicio_Publicacion__c) &amp;&amp; NOW() &gt; CC_Fecha_Inicio_Publicacion__c ||
CC_Fecha_Inicio_Publicacion__c &gt; CC_Fecha_Caducidad__c</errorConditionFormula>
    <errorMessage>Las fechas son incorrectas</errorMessage>
</ValidationRule>