force-app/main/default/objects/Knowledge__kav/listViews/CC_Arboles_Decision.listView-meta.xml
<ListView>
    <fullName>CC_Arboles_Decision</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.CC_Arbol_Decision</value>
    </filters>
    <label>Árboles de decisión</label>
</ListView>