force-app/main/default/objects/Knowledge__kav/listViews/CC_Articulos_Proximos_Caducar.listView-meta.xml
<ListView>
    <fullName>CC_Articulos_Proximos_Caducar</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>CC_Fecha_Inicio_Publicacion__c</columns>
    <columns>CC_Fecha_Caducidad__c</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>LANGUAGE</columns>
    <columns>CC_Responsable_Externo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>CC_Fecha_Caducidad__c</field>
        <operation>equals</operation>
        <value>NEXT_N_MONTHS:2</value>
    </filters>
    <label>Artículos próximos a caducar</label>
</ListView>