force-app/main/default/objects/Knowledge__kav/listViews/CC_Procedimientos.listView-meta.xml
<ListView>
    <fullName>CC_Procedimientos</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>VALIDATION_STATUS_ENUM</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Knowledge__kav.CC_Procedimiento</value>
    </filters>
    <label>Procedimientos</label>
</ListView>