force-app/main/default/objects/Knowledge__kav/listViews/Copia_de_Art_culos_publicados1.listView-meta.xml
<ListView>
    <fullName>Copia_de_Art_culos_publicados1</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>CC_Canal_Resolucion__c</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>CC_Responsable_Externo__c</columns>
    <columns>CC_Fecha_Caducidad__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>CC_Canal_Resolucion__c</field>
        <operation>equals</operation>
        <value>Accionista,Activaciones CaixaCard,All In One,App,Apple Store,Atención al Cliente</value>
    </filters>
    <filters>
        <field>CC_Canal_Resolucion__c</field>
        <operation>equals</operation>
        <value>Bloqueos,CaixaBank,CaixaBankNow,Caixa Protect TRF,Cajeros,Centralita,CEOE</value>
    </filters>
    <filters>
        <field>CC_Canal_Resolucion__c</field>
        <operation>equals</operation>
        <value>Emisiones PromoCaixa,Formulario web,Google Play,ICO Alquiler,ImaginBank,Junta Andalucia</value>
    </filters>
    <filters>
        <field>CC_Canal_Resolucion__c</field>
        <operation>equals</operation>
        <value>M2P Asistencia,M2P Bloqueos,M2P Distribuidores,Microbank,Oficina Preventiva,Omic</value>
    </filters>
    <filters>
        <field>CC_Canal_Resolucion__c</field>
        <operation>equals</operation>
        <value>Pago Móvil,Postventa CompraEstrella,Redsys-Sermepa,SMS Transferencias,Soporte PSU,Tarjetas,Telf Comentarios Apps,Web,Valija digital</value>
    </filters>
    <filters>
        <field>CC_Canal_Resolucion__c</field>
        <operation>equals</operation>
    </filters>
    <label>CLIENTES - Artículos publicados 2022</label>
</ListView>